@@ -23,6 +23,7 @@ import java.net.URI;
 import java.nio.file.FileSystem;
 import java.nio.file.LinkOption;
 import java.nio.file.Path;
+import java.nio.file.ProviderMismatchException;
 import java.nio.file.WatchEvent.Kind;
 import java.nio.file.WatchEvent.Modifier;
 import java.nio.file.WatchKey;
@@ -120,11 +121,7 @@ public class FilterPath implements Path {
 
   @Override
   public boolean startsWith(Path other) {
-    if (other instanceof FilterPath) {
-      FilterPath f = (FilterPath) other;
-      return fileSystem == f.fileSystem && delegate.startsWith(f.delegate);
-    }
-    return false;
+    return delegate.startsWith(toDelegate(other));
   }
 
   @Override
@@ -134,11 +131,7 @@ public class FilterPath implements Path {
 
   @Override
   public boolean endsWith(Path other) {
-    if (other instanceof FilterPath) {
-      FilterPath f = (FilterPath) other;
-      return fileSystem == f.fileSystem && delegate.endsWith(f.delegate);
-    }
-    return false;
+    return delegate.endsWith(toDelegate(other));
   }
 
   @Override
@@ -153,10 +146,7 @@ public class FilterPath implements Path {
 
   @Override
   public Path resolve(Path other) {
-    if (other instanceof FilterPath) {
-      other = ((FilterPath)other).delegate;
-    }
-    return wrap(delegate.resolve(other));
+    return wrap(delegate.resolve(toDelegate(other)));
   }
 
   @Override
@@ -166,10 +156,7 @@ public class FilterPath implements Path {
 
   @Override
   public Path resolveSibling(Path other) {
-    if (other instanceof FilterPath) {
-      other = ((FilterPath)other).delegate;
-    }
-    return wrap(delegate.resolveSibling(other));
+    return wrap(delegate.resolveSibling(toDelegate(other)));
   }
 
   @Override
@@ -179,10 +166,7 @@ public class FilterPath implements Path {
 
   @Override
   public Path relativize(Path other) {
-    if (other instanceof FilterPath) {
-      other = ((FilterPath)other).delegate;
-    }
-    return wrap(delegate.relativize(other));
+    return wrap(delegate.relativize(toDelegate(other)));
   }
 
   // TODO: should these methods not expose delegate result directly?
@@ -247,10 +231,7 @@ public class FilterPath implements Path {
 
   @Override
   public int compareTo(Path other) {
-    if (other instanceof FilterPath) {
-      other = ((FilterPath)other).delegate;
-    }
-    return delegate.compareTo(other);
+    return delegate.compareTo(toDelegate(other));
   }
   
   /**
@@ -272,5 +253,20 @@ public class FilterPath implements Path {
    *  path from various operations */
   protected Path wrap(Path other) {
     return new FilterPath(other, fileSystem);
+  }
+  
+  /** Override this to customize the unboxing of Path
+   *  from various operations
+   */
+  protected Path toDelegate(Path path) {
+    if (path instanceof FilterPath) {
+      FilterPath fp = (FilterPath) path;
+      if (fp.fileSystem != fileSystem) {
+        throw new ProviderMismatchException("mismatch, expected: " + fileSystem.provider().getClass() + ", got: " + fp.fileSystem.provider().getClass());
+      }
+      return fp.delegate;
+    } else {
+      throw new ProviderMismatchException("mismatch, expected: FilterPath, got: " + path.getClass());
+    }
   }
 }
